completed more styling changes

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=M+PLUS+Rounded+1c&family=Montserrat&family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=M+PLUS+Rounded+1c&family=Mandali&family=Montserrat&family=Staatliches&family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <title>Fitness Tracker</title>
 </head>
 <body>
